packages/frontend/src/features/ai-chat/components/dialogue-window/dialogue-window.component.scss
:host {
  overflow-y: auto;
  display: block;
  flex: 1;

  width: 100%;
  padding: var(--spacing-x5);
  border: 1px solid var(--secondary-color);
  border-radius: var(--radius-md);
}

.user-message-row {
  display: flex;
  justify-content: end;
  width: 100%;
}

.user-message {
  max-width: 70%;
  margin-top: var(--spacing-x3);
  margin-bottom: var(--spacing-x3);
  padding: var(--spacing-x3);
  border: 1px solid var(--accent-color);
  border-radius: var(--radius-md);

  overflow-wrap: anywhere;
}

